[package]
name = "vlog"
version = "0.1.1"
authors = ["Chen Weiguang <chen.weiguang@gmail.com>"]
description = "Macros to do stdout / stderr logs based on verbosity level."
documentation = "https://docs.rs/vlog"
repository = "https://github.com/guangie88/vlog-rs"
readme = "README.md"
keywords = ["verbose", "verbosity", "level", "log", "cli"]
categories = ["command-line-utilities", "config", "rust-patterns"]
license = "MIT"

[badges]
travis-ci = { repository = "guangie88/vlog-rs" }
codecov = { repository = "guangie88/vlog-rs" }

# [dev-dependencies]
# gag = "0.1.9"

[lib]
name = "vlog"
path = "src/lib.rs"
